[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-image-gen"
version = "1.0.0"
description = "AI image generation using Alibaba's Qwen Image 2.0 Pro model"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "catherineliao", email = "catherineliaooo@gmail.com"}
]
keywords = ["qwen", "image-generation", "ai", "dashscope", "alibaba"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Generation",
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
qwen-image-gen = "qwen_image_gen.cli:main"

[project.urls]
Homepage = "https://github.com/qwen-team/qwen-image-gen"
Documentation = "https://github.com/qwen-team/qwen-image-gen#readme"
Repository = "https://github.com/qwen-team/qwen-image-gen.git"
Issues = "https://github.com/qwen-team/qwen-image-gen/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["qwen_image_gen*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
